First step for loading app cfg file at runtime