@@ -28,8 +28,7 @@ public class YamlSettingsStore implements SettingsStore {
 		if (!Files.exists(filepath)) {
 			write();
 		}
-		//TODO: replace with Files.readString in Java11+
-		String yaml = new String(Files.readAllBytes(filepath));
+		String yaml = Files.readString(filepath);
 		values = YamlSerializer.deserialize(yaml);
 	}
 	
@@ -47,8 +46,7 @@ public class YamlSettingsStore implements SettingsStore {
 	private void write() {
 		String yaml = YamlSerializer.serialize(values);
 		try {
-			//TODO: replace with Files.writeString in Java11+
-			Files.write(filepath, yaml.getBytes(), 
+			Files.writeString(filepath, yaml, 
 					StandardOpenOption.CREATE, 
 					StandardOpenOption.DSYNC, 
 					StandardOpenOption.WRITE, 
